page-analyzer/src/main/resources/com/example/views/errors/405.ftl
<#-- @ftlvariable name="errorView" type="com.gigfilter.rest.views.ErrorView" -->
<#import "Layout.ftl" as layout>
<@layout.layout>

<h3>405: Sorry, you can't do that here...</h3>
<h3>Really, what were you thinking? (just hit the back button)</h3>

</@layout.layout>